--- a/bio.html
+++ b/bio.html
@@ -5,13 +5,20 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Storyteller — Manu Pavez</title>
   <meta name="description" content="La historia detrás de Manu Pavez: Frequency Storyteller." />
-  <link rel="stylesheet" href="css/base.css">
+
+  <script defer src="js/supabase-config.js"></script>
+  <script type="module" src="js/main.js"></script>
+  <!-- Tipografías -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500;600;700&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet" />
+
+  <!-- Estilos -->
+    <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/components.css">
   <link rel="stylesheet" href="css/pages/bio.css">
   <link rel="stylesheet" href="css/responsive.css">
-  <script defer src="js/supabase-config.js"></script>
-  <script type="module" src="js/main.js"></script>
 </head>
 
 <body data-page="bio">
