--- a/bio.html
+++ b/bio.html
@@ -12,6 +12,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500;600;700&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet" />
+<link rel="canonical" href="https://manupavez.com/" />
+  <link rel="icon" href="logos/CUBO%20BLANCO%20MP.png" />
 
   <!-- Estilos -->
     <link rel="stylesheet" href="css/base.css">
